force-app/main/default/objects/Account/fields/NCAA_Conference__c.field-meta.xml
<CustomField>
    <fullName>NCAA_Conference__c</fullName>
    <label>NCAA Conference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Athletic Conference</fullName>
            </value>
            <value>
                <fullName>Atlantic Coast Conference</fullName>
            </value>
            <value>
                <fullName>Big 12 Conference</fullName>
            </value>
            <value>
                <fullName>Big Ten Conference</fullName>
            </value>
            <value>
                <fullName>Conference USA</fullName>
            </value>
            <value>
                <fullName>Division I FBS Independents</fullName>
            </value>
            <value>
                <fullName>Mid-American Conference</fullName>
            </value>
            <value>
                <fullName>Mountain West Conference</fullName>
            </value>
            <value>
                <fullName>Pacific-12 Conference</fullName>
            </value>
            <value>
                <fullName>Southeastern Conference</fullName>
            </value>
            <value>
                <fullName>Sun Belt Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>