force-app/main/default/objects/Account/fields/NCES_District_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_District_ID__c</fullName>
    <label>NCES District ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>