force-app/main/default/objects/Account/fields/NCES_School_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_School_ID__c</fullName>
    <label>NCES School ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>