force-app/main/default/objects/Account/fields/New_Business_Records__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Business Records</label>
    <type>Checkbox</type>
</CustomField>