force-app/main/default/objects/Account/fields/New_Business_Summary__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Summary__c</fullName>
    <formula>Current_Year_Projected__c + Current_Year_Sum__c + Current_Year_New_Business__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Business Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>