force-app/main/default/objects/Account/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <description>Will show as checked when Account has exactly 1 Closed Won Opportunity.</description>
    <formula>AND(Count_of_Closed_Won_Opportunities__c = 1,  Count_of_Budget_Opportunities__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will show as checked when Account has exactly 1 Closed Won Opportunity.</inlineHelpText>
    <label>New Client</label>
    <type>Checkbox</type>
</CustomField>