force-app/main/default/objects/Account/fields/New_Client_Rollup__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Rollup__c</fullName>
    <label>New Client Rollup</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won - Reconciled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>