force-app/main/default/objects/Account/fields/NextGenCreated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>NextGenCreated_Date_Time__c</fullName>
    <label>NextGenCreated Date/Time</label>
    <type>DateTime</type>
</CustomField>