force-app/main/default/objects/Account/fields/NIL__c.field-meta.xml
<CustomField>
    <fullName>NIL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a NCAA name, image, and likeness client?</inlineHelpText>
    <label>NIL</label>
    <type>Checkbox</type>
</CustomField>