force-app/main/default/objects/Account/fields/NIRSA_Get_Activated_Participant__c.field-meta.xml
<CustomField>
    <fullName>NIRSA_Get_Activated_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIRSA Get Activated Participant</label>
    <type>Checkbox</type>
</CustomField>