force-app/main/default/objects/Account/fields/NIRSA_ID__c.field-meta.xml
<CustomField>
    <fullName>NIRSA_ID__c</fullName>
    <label>NIRSA ID #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>