force-app/main/default/objects/Account/fields/NIRSA_Membership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NIRSA_Membership_Expiration_Date__c</fullName>
    <label>NIRSA Membership Expiration Date</label>
    <type>Date</type>
</CustomField>