force-app/main/default/objects/Account/fields/Non_Resident_Alien__c.field-meta.xml
<CustomField>
    <fullName>Non_Resident_Alien__c</fullName>
    <label>% Non-Resident Alien</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>