force-app/main/default/objects/Account/fields/of_IFC_Chapters__c.field-meta.xml
<CustomField>
    <fullName>of_IFC_Chapters__c</fullName>
    <label>#of IFC Chapters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>