force-app/main/default/objects/Account/fields/of_Multicultural_Chapters__c.field-meta.xml
<CustomField>
    <fullName>of_Multicultural_Chapters__c</fullName>
    <label># of Multicultural Chapters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>