force-app/main/default/objects/Account/fields/of_NPHC__c.field-meta.xml
<CustomField>
    <fullName>of_NPHC__c</fullName>
    <label># of NPHC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>