force-app/main/default/objects/Account/fields/of_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>of_Part_Time__c</fullName>
    <label>% of Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>