force-app/main/default/objects/Account/fields/of_Registered_Clubs_and_Organizations__c.field-meta.xml
<CustomField>
    <fullName>of_Registered_Clubs_and_Organizations__c</fullName>
    <label># of Registered Clubs and Organizations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>