force-app/main/default/objects/Account/fields/of_Students_Who_Live_On_Campus__c.field-meta.xml
<CustomField>
    <fullName>of_Students_Who_Live_On_Campus__c</fullName>
    <label>% of Students Who Live On Campus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>