force-app/main/default/objects/Account/fields/of_Total_Enrollment_To_Undergraduate__c.field-meta.xml
<CustomField>
    <fullName>of_Total_Enrollment_To_Undergraduate__c</fullName>
    <label>% of Total Enrollment = To Undergraduate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>