force-app/main/default/objects/Account/fields/of_Total_Greek_Chapters__c.field-meta.xml
<CustomField>
    <fullName>of_Total_Greek_Chapters__c</fullName>
    <label># of Total Greek Chapters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>