force-app/main/default/objects/Account/fields/Off_Season_Address__c.field-meta.xml
<CustomField>
    <fullName>Off_Season_Address__c</fullName>
    <label>Off-Season Address</label>
    <type>TextArea</type>
</CustomField>