force-app/main/default/objects/Account/fields/On_Current_Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>On_Current_Year_Budget__c</fullName>
    <label>On Current Year Budget</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Budget</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/31/2023</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>