force-app/main/default/objects/Account/fields/One_but_less_than_two_years_certificate__c.field-meta.xml
<CustomField>
    <fullName>One_but_less_than_two_years_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One but less than two years certificate</label>
    <type>Checkbox</type>
</CustomField>