force-app/main/default/objects/Account/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <label>Org</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LSCYCLE</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Business Dev</fullName>
            </value>
            <value>
                <fullName>Talent</fullName>
            </value>
            <value>
                <fullName>Coprorate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>