force-app/main/default/objects/Account/fields/Other_degree__c.field-meta.xml
<CustomField>
    <fullName>Other_degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other degree</label>
    <type>Checkbox</type>
</CustomField>