force-app/main/default/objects/Account/fields/Other_information__c.field-meta.xml
<CustomField>
    <fullName>Other_information__c</fullName>
    <label>Other information?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>