force-app/main/default/objects/Account/fields/Outdoor_Event_Space_Location_and_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Event_Space_Location_and_Notes__c</fullName>
    <label>Outdoor Event Space Location and Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>