force-app/main/default/objects/Account/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://wlsc.my.salesforce.com/&quot; &amp;  OwnerId, Owner.FirstName  &amp; &quot;  &quot; &amp; Owner.LastName  ,&quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>