force-app/main/default/objects/Account/fields/Philanthropy_Focus__c.field-meta.xml
<CustomField>
    <fullName>Philanthropy_Focus__c</fullName>
    <label>Philanthropy Focus</label>
    <type>TextArea</type>
</CustomField>