force-app/main/default/objects/Account/fields/Pipeline_Brands_and_Properties_UK__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Brands_and_Properties_UK__c</fullName>
    <label>Pipeline - Brands and Properties UK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>