force-app/main/default/objects/Account/fields/Pipeline_Brands_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Brands_Corporate__c</fullName>
    <label>Pipeline - Brands Corporate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>