force-app/main/default/objects/Account/fields/Pipeline_Brands_Middle_East__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Brands_Middle_East__c</fullName>
    <label>Pipeline - Brands Middle East</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>