force-app/main/default/objects/Account/fields/Pipeline_Brands_Properties_US__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Brands_Properties_US__c</fullName>
    <label>Pipeline - Brands &amp; Properties US</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>