force-app/main/default/objects/Account/fields/Pipeline_Canada__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Canada__c</fullName>
    <label>Pipeline - Canada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>