force-app/main/default/objects/Account/fields/Pipeline_Experiential_US__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Experiential_US__c</fullName>
    <label>Pipeline - Experiential US</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>