force-app/main/default/objects/Account/fields/Pipeline_LS_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_LS_Cycle__c</fullName>
    <label>Pipeline - LS / Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>