force-app/main/default/objects/Account/fields/Pipeline_Mexico__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Mexico__c</fullName>
    <label>Pipeline - Mexico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>