force-app/main/default/objects/Account/fields/Pipeline_Properties_US_Raleigh__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Properties_US_Raleigh__c</fullName>
    <label>Pipeline - Properties US - Raleigh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>