force-app/main/default/objects/Account/fields/Popular_Majors__c.field-meta.xml
<CustomField>
    <fullName>Popular_Majors__c</fullName>
    <label>Popular Majors</label>
    <type>TextArea</type>
</CustomField>