force-app/main/default/objects/Account/fields/Post_master_s_certificate__c.field-meta.xml
<CustomField>
    <fullName>Post_master_s_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-master&apos;s certificate</label>
    <type>Checkbox</type>
</CustomField>