force-app/main/default/objects/Account/fields/Postbaccalaureate_certificate__c.field-meta.xml
<CustomField>
    <fullName>Postbaccalaureate_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postbaccalaureate certificate</label>
    <type>Checkbox</type>
</CustomField>