force-app/main/default/objects/Account/fields/Primary_Genre__c.field-meta.xml
<CustomField>
    <fullName>Primary_Genre__c</fullName>
    <description>Genre for Music Clients</description>
    <label>Primary Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Genre</valueSetName>
    </valueSet>
</CustomField>