force-app/main/default/objects/Account/fields/Prior_Year_Contracted__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Contracted__c</fullName>
    <label>Prior Year Contracted</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Laundry Service / Cycle, Marketing, Cycle Direct, Journal Entry</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Close_Date_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>