force-app/main/default/objects/Account/fields/Prior_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Revenue__c</fullName>
    <label>Prior Year Revenue</label>
    <summarizedField>Opportunity.Prior_Year_Revenue__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>