force-app/main/default/objects/Account/fields/Program_Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Board_Name__c</fullName>
    <label>Program Board Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>