force-app/main/default/objects/Account/fields/Program_Board_Website__c.field-meta.xml
<CustomField>
    <fullName>Program_Board_Website__c</fullName>
    <label>Program Board Website</label>
    <type>Url</type>
</CustomField>