force-app/main/default/objects/Account/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blackboard Fall 2012</fullName>
            </value>
            <value>
                <fullName>Blackboard Summer 2012</fullName>
            </value>
            <value>
                <fullName>CashCourse Fall 2010</fullName>
            </value>
            <value>
                <fullName>CashCourse Spring 2011</fullName>
            </value>
            <value>
                <fullName>Cengage Spring 2013</fullName>
            </value>
            <value>
                <fullName>Citizens Fall 2009</fullName>
            </value>
            <value>
                <fullName>Citizens Loan Spring 2010</fullName>
            </value>
            <value>
                <fullName>Copia Fall 2011</fullName>
            </value>
            <value>
                <fullName>FYE Fall 2009</fullName>
            </value>
            <value>
                <fullName>IKEA Fall 2009</fullName>
            </value>
            <value>
                <fullName>Kotex Spring 2013</fullName>
            </value>
            <value>
                <fullName>K-Swiss/Foot Locker Tour Spring 2008</fullName>
            </value>
            <value>
                <fullName>L&apos;Oreal Spring 2013</fullName>
            </value>
            <value>
                <fullName>Lenovo Spring 2012</fullName>
            </value>
            <value>
                <fullName>Macy&apos;s Spring 2013</fullName>
            </value>
            <value>
                <fullName>Macy&apos;s Spring 2013 Campus Tour</fullName>
            </value>
            <value>
                <fullName>Maxim Fall 2010</fullName>
            </value>
            <value>
                <fullName>Maxim Spring 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Rep Program Fall 2009</fullName>
            </value>
            <value>
                <fullName>Microsoft Rep Program Fall 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Rep Program Spring 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Rep Program Spring 2011</fullName>
            </value>
            <value>
                <fullName>Microsoft Tour Fall 2009</fullName>
            </value>
            <value>
                <fullName>Microsoft Tour Fall 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Tour Spring 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Tour Spring 2011</fullName>
            </value>
            <value>
                <fullName>MTV/Dove Fall 2011</fullName>
            </value>
            <value>
                <fullName>MTVU Fall 2011</fullName>
            </value>
            <value>
                <fullName>PacSun Fall 2012</fullName>
            </value>
            <value>
                <fullName>PacSun Spring 2012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>