force-app/main/default/objects/Account/fields/Projected_Brands_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Projected_Brands_Corporate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projected - Brands Corporate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>