force-app/main/default/objects/Account/fields/Projected_Canada__c.field-meta.xml
<CustomField>
    <fullName>Projected_Canada__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projected - Canada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>