force-app/main/default/objects/Account/fields/Projected_Experiential_UK__c.field-meta.xml
<CustomField>
    <fullName>Projected_Experiential_UK__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projected - Experiential UK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>