force-app/main/default/objects/Account/fields/Projected_LS_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Projected_LS_Cycle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projected - LS / Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>