force-app/main/default/objects/Account/fields/Projected_Properties_US_Raleigh__c.field-meta.xml
<CustomField>
    <fullName>Projected_Properties_US_Raleigh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projected - Properties US - Raleigh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>