force-app/main/default/objects/Account/fields/Quota_Count__c.field-meta.xml
<CustomField>
    <fullName>Quota_Count__c</fullName>
    <label>Quota Count</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Quota</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>