force-app/main/default/objects/Account/fields/Race_Ethnicity_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity_Unknown__c</fullName>
    <label>% Race/Ethnicity Unknown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>