force-app/main/default/objects/Account/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <formula>CASESAFEID(RecordTypeId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type ID</label>
    <type>Text</type>
</CustomField>