force-app/main/default/objects/Account/fields/Recruiting_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Ranking__c</fullName>
    <description>3-Confident no problem, would want on school list (strong pipeline, rarely need to do new outreach and if we do, it is easy)
2-Somewhat confident (resources available and/or able semi-consistently able to find strong students with some digging)
1-Not confident (limited resources and/or consistently challenging to find strong students) 
0-Awful, please no! (extremely and consistently challenging)</description>
    <inlineHelpText>3-Confident, would want on school list
2-Somewhat confident
1-Not confident
0-Awful, please no</inlineHelpText>
    <label>Recruiting Ranking (3/2022)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>