force-app/main/default/objects/Account/fields/Recruitment_Lead__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Recruitment Lead)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>