force-app/main/default/objects/Account/fields/Recruitment_Region__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Region__c</fullName>
    <label>Recruitment Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>