force-app/main/default/objects/Account/fields/Reduced_Lunch_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Reduced_Lunch_Eligible__c</fullName>
    <label>Reduced Lunch Eligible</label>
    <type>TextArea</type>
</CustomField>