force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEN</fullName>
            </value>
            <value>
                <fullName>MAM</fullName>
            </value>
            <value>
                <fullName>MAT</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>SOU</fullName>
            </value>
            <value>
                <fullName>WST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>