force-app/main/default/objects/Account/fields/Reservable_Indoor_Space_15_x15__c.field-meta.xml
<CustomField>
    <fullName>Reservable_Indoor_Space_15_x15__c</fullName>
    <label>Reservable Indoor Space (&lt; 15&apos;x15&apos;)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>