force-app/main/default/objects/Account/fields/Reservable_Smaller_Outdoor_Space_15_x15__c.field-meta.xml
<CustomField>
    <fullName>Reservable_Smaller_Outdoor_Space_15_x15__c</fullName>
    <description>Is there reservable outdoor space on campus that is smaller than 15&apos; x 15&apos;? As of fall 2019, these fees are usually $2,000 - $2,500+.</description>
    <label>Reservable Outdoor Space &lt; 15&apos;x15&apos;</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>