force-app/main/default/objects/Account/fields/Residents__c.field-meta.xml
<CustomField>
    <fullName>Residents__c</fullName>
    <label>Residents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>