force-app/main/default/objects/Account/fields/Retail_Beverage_Contract__c.field-meta.xml
<CustomField>
    <fullName>Retail_Beverage_Contract__c</fullName>
    <description>C-Stores and any other campus stores.</description>
    <inlineHelpText>C-Stores and any other campus stores.</inlineHelpText>
    <label>Retail Beverage Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coke</fullName>
            </value>
            <value>
                <fullName>Pepsi</fullName>
            </value>
            <value>
                <fullName>Shared (Coke/Pepsi share rights across campus, no pouring rights deal)</fullName>
            </value>
            <value>
                <fullName>Keurig Dr Pepper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>